--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodTime">
         <activity
-            android:name=".DBlogin"
-            android:exported="false" />
-        <activity
             android:name=".LogInActivity"
             android:exported="true">
             <intent-filter>
@@ -21,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".mainActivity" />
+        <activity android:name=".SignUpActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
